cif/org.eclipse.escet.cif.tests/tests/cif2plc/negative_zero_iec/proj8_TupleStruct_1.plcfunc
FUNCTION proj8_TupleStruct_1: LREAL
VAR_INPUT
    tuple: TupleStruct_1;
END_VAR

proj8_TupleStruct_1 := tuple.field8;
END_FUNCTION
